# computer-vision-dojo

./: .gitignore  README.md
Coppelia/: Conveyor_Activity.ttt  KUKA_YouBot.ttt  Robotnik_Summit_XL_sand.ttt
coppelia/: Conveyor_Activity.ttt
coppelia_files/: Conveyor_Activity.ttt  Robotnik_Summit_XL.ttt
cpp/: CMakeLists.txt  requirements.txt
cpp/class-challenges/first_cv_challenge/: CMakeLists.txt  main.cpp
cpp/class-challenges/first_cv_challenge/include/: DolphinPlayingWithPixels.hpp
cpp/class-challenges/first_cv_challenge/src/: DolphinPlayingWithPixels.cpp
python/: .gitignore  requirements.txt
python/class-challenges/: README.md  setup.py
python/class-challenges/samples/: class-challenge-module.py  connecte_components.py  drawing_sample.py  image_operations.py  principal-component-analysis.py  sample_class_1.py  sample_class_2.py  sample_class_3.py  sample_class_4.py  sample_class_6.py  (+3 more)
python/computer-vision-finalterm/: characters_dataset_preprocessing _full.py  characters_dataset_preprocessing.py  characters_modeling.py  class-challenge-module.py  get_path_assests_folder.py  mlp_implementation.py  mlp_pipeline.py  test_extra_charac.py
python/computer-vision-midterm/: pool_game_parcial.py
python/computer-vision-test-one/: computer_vision_quiz_1.py  image_segmentation.py
python/computer-vision-test-two/: characters_dataset_preprocessing.py  characters_modeling.py  mlp_implementation.py  mlp_pipeline.py  test_extra_charac.py
python/coppelia-robotics/: README.md  setup.py
python/raspberry-pi-projects/: LICENSE  README.md  setup.py
(+77 files in other folders)
